--- a/src/css/search-styles.css
+++ b/src/css/search-styles.css
@@ -727,6 +727,7 @@
 @media (max-width: 768px) {
   .search-container {
     padding: 2px 6px 2px 12px;
+    display: none;
   }
 
   .search-input {
