Tạo phần đăng nhập , hoàn thiện các chức năng của 3 trang order, orderDetails , analyze và accountaccount

--- a/admin/style/sidebar.css
+++ b/admin/style/sidebar.css
@@ -42,3 +42,9 @@
     margin-bottom: 20px;
     width: 54px
 }
+.admin  {
+    display: flex;
+    flex-direction: column;
+    height: 60px;
+    font-size: 20px;
+}
