--- a/admin/style/orderDetail.css
+++ b/admin/style/orderDetail.css
@@ -468,3 +468,15 @@ td img {
     font-size: 16px;
     margin-right: 5px;
 }
+.buyer-info {
+  display: flex;
+      flex-direction: column;
+      gap: 5px;
+      font-weight: bold;
+}
+.shipping-details {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  font-weight: bold;
+}
