--- a/admin/style/header.css
+++ b/admin/style/header.css
@@ -109,8 +109,8 @@
       max-width: 100%;
       }
       .avatar {
-        width: 58px;
-        height: auto;
+        width: 65px;
+        height: 65px;
        }  
        .offcanvas.offcanvas-start {
         background-color: #35635A;
