sửa lại kích thước sản phẩm, xóa ở user-sanpham.php, thêm ở san-pham.css class single-image

--- a/src/css/san-pham.css
+++ b/src/css/san-pham.css
@@ -346,7 +346,8 @@ input[type="search"] {
 
 /* ảnh sản phẩm */
 .single-image {
-  width: 30%;
+  width: 432px;
+  height: 432px;
   margin-left: 50px;
 }
 
