--- a/src/css/san-pham.css
+++ b/src/css/san-pham.css
@@ -349,6 +349,7 @@ input[type="search"] {
   width: 432px;
   height: 432px;
   margin-left: 50px;
+  border-radius: 10px;
 }
 
 /* nội dung sản phẩm bên phải */
