--- a/admin/style/analyzeStyle.css
+++ b/admin/style/analyzeStyle.css
@@ -6,7 +6,6 @@
     background-color: #f5f5f5;
   }
 
-  /* Cải thiện layout tổng thể */
   .container {
     max-width: 1200px;
     margin-left: 1rem;
@@ -196,10 +195,10 @@
     font-weight: 500;
   }
 
-  .total-amount {
+  /* .total-amount {
     font-weight: bold;
     color: #2f80ed;
-  }
+  } */
 
   td.total-amount {
     padding-right: 20px;
@@ -588,6 +587,7 @@ table.scrollable-table::-webkit-scrollbar-thumb:hover {
     .summary-card {
       width: 100%;
       max-width: 400px;
-      margin-bottom: 20px;
+      margin: auto;
+      padding: 10px;
     }
   }
