--- a/admin/style/reponsiveAnalyze.css
+++ b/admin/style/reponsiveAnalyze.css
@@ -141,11 +141,13 @@
 
   td {
     position: relative;
-    padding: 8px 8px 8px 50%;
+    /* padding: 8px 8px 8px 50%; */
     border-bottom: 1px solid #eee;
     font-size: 12px;
   }
-
+  .order-detail-link .btn-info {
+    margin: auto;
+}
   td:before {
     content: attr(data-label);
     position: absolute;
@@ -156,10 +158,10 @@
     white-space: nowrap;
   }
 
-  td.total,
+  /* td.total,
   td:nth-child(5) {
     display: none;
-  }
+  } */
 
   /* Khôi phục filter-section trên smartphone */
   .filter-section {
@@ -175,6 +177,12 @@
     font-size: 12px;
     padding: 5px;
   }
+  .offcanvas-body {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-left: 0px;
+}
 }
 
 /* Smartphone & Mobile (< 748px) */
@@ -219,7 +227,7 @@
     padding: 10px;
   }
   .container h3,p{
-    font-size: 17px;
+    font-size: 13px;
   }
   .container h1 {
     font-size: 18px;
@@ -297,28 +305,30 @@
     transition: 1s;
     font-size: 35px;
   }
-
-  .header-right-section {
+  .bell-notification {
+    margin-left: 30px;
+}
+  /* .header-right-section {
     width: 41%;
-    margin-right: 17px;
-  }
+    margin-right: 62px;
+  } */
 
-  .header-right-section img {
+  /* .header-right-section img {
     width: 55px;
     height: auto;
-  }
+  } */
 
   .name-employee p {
     font-size: 16px;
   }
 
   .header-middle-section {
-    margin-left: -33px;
+    margin-left: 0px;
   }
 
   .offcanvas.offcanvas-start,
   .offcanvas-backdrop {
-    display: none;
+    /* display: none; */
   }
 
   .main-container {
@@ -329,7 +339,9 @@
   .index-menu {
     display: none;
   }
-
+  .total-amount {
+    display: none;
+  }
   .main-content {
     width: 30%;
   }
@@ -342,9 +354,11 @@
 
   .filter-section {
     display: flex;
-    flex-direction: row;
-    width: 100%;
+    flex-direction: column;
+    width: 80%;
     gap: 10px;
+    margin: auto;
+    margin-bottom: 20px;
   }
 
   .statistic-section {
