--- a/src/css/thanh-toan.css
+++ b/src/css/thanh-toan.css
@@ -215,7 +215,6 @@ body {
   max-height: 300px;
   overflow-y: auto;
   border-radius: 6px;
-
 }
 
 .product-list .product {
@@ -424,7 +423,6 @@ body {
   height: 3rem;
 }
 
-
 .payment-method {
   display: flex;
   flex-direction: column;
@@ -491,7 +489,6 @@ h2 {
   margin-bottom: 15px;
 }
 
-
 #banking-form label {
   font-weight: bold;
   margin-top: 10px;
@@ -544,13 +541,12 @@ h2 {
 
 /* FOOTER  */
 
-
 /* PC  */
-@media only screen and (min-width: 1023.98px) {}
+@media only screen and (min-width: 1023.98px) {
+}
 
 /* TABLET and MOBILE  */
 @media only screen and (max-width: 768.01px) {
-
   /* Header  */
   .item-header {
     gap: 20px;
@@ -577,7 +573,7 @@ h2 {
   }
 
   .status-order {
-    height: 90px
+    height: 90px;
   }
 
   .status-order,
@@ -644,18 +640,14 @@ h2 {
 
 /* TABLET  */
 @media only screen and (min-width: 425px) and (max-width: 768.01px) {
-
   /* Main  */
   .content {
     width: 110%;
   }
-
-
 }
 
 /* MOBILE  */
 @media only screen and (max-width: 425.1px) {
-
   /* Main  */
   .content {
     width: 106%;
@@ -674,7 +666,6 @@ h2 {
   }
 
   /* Footer  */
-
 
   .row-1 img {
     width: 53%;
