--- a/src/css/trang-chu.css
+++ b/src/css/trang-chu.css
@@ -368,7 +368,7 @@ body {
 
 .img__TREE {
   position: relative;
-  width: 200px;
+  width: 300px;
   /* Chiếm 22% chiều rộng container cha, có thể thay đổi */
   min-width: 200px;
   /* Kích thước nhỏ nhất để ảnh không quá nhỏ */
@@ -380,7 +380,6 @@ body {
   /* Căn giữa theo chiều ngang */
   transition: all 0.3s ease;
   /* Thêm hiệu ứng chuyển đổi mượt mà */
-  width: calc(25% - 113px);
   /* 4 phần tử, trừ khoảng cách */
   box-sizing: border-box;
   text-align: center;
@@ -396,7 +395,7 @@ body {
 .THE-TREE {
   width: 100%;
   /* Ảnh chiếm toàn bộ chiều rộng của phần tử cha */
-  height: auto;
+  height: 100%;
   /* Tự động điều chỉnh chiều cao để giữ tỷ lệ khung hình */
   cursor: pointer;
   /* Thay đổi con trỏ khi hover vào ảnh */
