sửa trang index

--- a/src/css/trang-chu.css
+++ b/src/css/trang-chu.css
@@ -774,6 +774,7 @@ body {
 
   #product1 .pro {
     margin: 10px;
+    width: fit-content;
   }
 }
 
@@ -814,6 +815,7 @@ body {
 
   #product1 .pro {
     margin: 10px;
+    width: fit-content;
   }
 }
 
