--- a/src/css/hoan-tat.css
+++ b/src/css/hoan-tat.css
@@ -354,10 +354,18 @@ body {
 
 .noti-order-success p {
   color: #065212;
+  margin: 15px 0;
 }
 
 .noti-thanks {
   width: 70%;
+}
+
+.noti-thanks p {
+  font-size: 20px;
+  color: #065212;
+  text-align: center;
+  font-weight: bold;
 }
 
 .cart-2 {
@@ -473,6 +481,19 @@ th {
   background-color: #218838;
 }
 
+.invoice-container {
+  font-size: 20px;
+}
+
+.invoice-container table thead tr th {
+  text-align: center;
+}
+
+.invoice-container table tbody tr td img {
+  width: 100px;
+  height: auto;
+}
+
 /* FOOTER  */
 
 /* PC  */
@@ -559,6 +580,7 @@ th {
     align-items: center;
   }
 
+
   .row-1 {
     display: flex;
     justify-content: center;
@@ -619,7 +641,7 @@ th {
   }
 
   .invoice-container {
-    width: 80%;
+    width: 95%;
   }
 }
 
