--- a/src/css/user-sanpham.css
+++ b/src/css/user-sanpham.css
@@ -15,13 +15,14 @@
   z-index: 999;
   padding: 10px;
   border-radius: 8px;
-  top: calc(
-    100% + 3px
-  ); /* Điều chỉnh giá trị này để dropdown gần sát với icon giỏ hàng hơn */
+  top: calc(100% + 3px);
+  /* Điều chỉnh giá trị này để dropdown gần sát với icon giỏ hàng hơn */
   visibility: hidden;
   opacity: 0;
-  transform: scale(0.9); /* Giảm kích thước khi ẩn */
-  transition: opacity 1s ease, visibility 0s 1s, transform 1s ease; /* Thêm thời gian 1 giây cho opacity và transform */
+  transform: scale(0.9);
+  /* Giảm kích thước khi ẩn */
+  transition: opacity 1s ease, visibility 0s 1s, transform 1s ease;
+  /* Thêm thời gian 1 giây cho opacity và transform */
 }
 
 /* Khi hover vào cart-wrapper, hiển thị dropdown */
@@ -29,8 +30,10 @@
   display: block;
   visibility: visible;
   opacity: 1;
-  transform: scale(1); /* Phóng to dropdown */
-  transition: opacity 1s ease, visibility 0s 0s, transform 1s ease; /* Đảm bảo thời gian 1 giây */
+  transform: scale(1);
+  /* Phóng to dropdown */
+  transition: opacity 1s ease, visibility 0s 0s, transform 1s ease;
+  /* Đảm bảo thời gian 1 giây */
 }
 
 /* Giữ cho cả phần cart-icon và dropdown hiển thị khi hover */
@@ -61,4 +64,30 @@
 .cart-item-details p {
   margin: 2px 0;
   font-size: 13px;
+}
+
+.description {
+  margin-top: 20px;
+  padding: 15px;
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+}
+
+
+
+.description h2 {
+  color: #1c8e2e;
+  margin: 10px 0;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.description p {
+  color: #333;
+  font-size: 20px;
+  line-height: 1.6;
+  text-align: justify;
+  margin: 0;
+  font-weight: 300px;
 }
