--- a/src/css/gio-hang.css
+++ b/src/css/gio-hang.css
@@ -359,8 +359,15 @@ body {
   height: 10rem;
   align-items: center;
   /* justify-content: space-between; */
-  margin-top: 6rem;
 }
+
+.order {
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 1px 8px rgba(0, 0, 0, 0.1);
+  margin: 50px 0 0 0;
+}
+
 
 .order-img img {
   width: 8rem;
