--- a/src/css/gio-hang.css
+++ b/src/css/gio-hang.css
@@ -641,7 +641,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 45em;
+    height: fit-content;
     width: 100%;
     margin-top: -4vw;
   }
@@ -722,7 +722,7 @@ body {
     flex-direction: column;
     align-items: center;
     /* justify-content: center; */
-    height: 45em;
+    height: fit-content;
     width: 100%;
     margin-top: -4vw;
   }
